--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#0078D7",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "calculator-icon.svg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "calculator-icon.svg",
       "sizes": "512x512",
       "type": "image/png"
     }
